--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ h2{
     margin-bottom: -7px;
 }
 
-.aboutMe-section{
+#aboutMe-section{
     background-image: url("images/7.png");
     background-repeat: no-repeat;
     background-size: cover;
